<resources>
    <string name="app_name">Messenger</string>
    <string name="your_email">Your email:</string>
    <string name="messenger">Messenger</string>
    <string name="password">Password:</string>
    <string name="login">login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="password_reg">Password</string>
    <string name="email_reg">Email</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="how_old_are_you">How old are you ?</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password_activity">Forgot password ?</string>
    <string name="reset_password">reset password</string>
    <string name="logout">Logout</string>
    <string name="type_your_message">Type your message:</string>
</resources>