<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".RegistrationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/registration"
        android:textColor="@color/purple_500"
        android:textSize="46sp" />

    <EditText
        android:layout_marginBottom="12dp"
        android:id="@+id/editTextRegisterEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="emailAddress"
        android:hint="@string/email_reg"
        android:inputType="textEmailAddress"
        android:textSize="18sp" />

    <EditText
        android:layout_marginBottom="12dp"
        android:id="@+id/editTextRegisterPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="password"
        android:hint="@string/password_reg"
        android:inputType="textPassword"
        android:textSize="18sp" />

    <EditText
        android:layout_marginBottom="12dp"
        android:id="@+id/editTextRegisterName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/name"
        android:inputType="text" />

    <EditText
        android:layout_marginBottom="12dp"
        android:id="@+id/editTextRegisterLastName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/last_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextRegisterAge"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="14dp"
        android:hint="@string/how_old_are_you"
        android:inputType="number" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="16sp" />

</LinearLayout>